[tool.poetry]
name = "chatgpt-client"
version = "0.1.0"
description = "Python client for the unofficial ChatGPT API."
authors = ["vsakkas <vasileios.sakkas96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
aioresponses = "^0.7.4"
mypy = "^0.991"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
